crates/swc_ecma_parser/tests/errors/arrow-function-binding-rest-property/input.js
({...a.b})=>{};
(a, {...b.c})=>{};

(...{...{}})=>{};
(a, ...{...{}})=>{};

([...{...[]}])=>{};
(a, [...{...[]}])=>{};